--- a/webauthn-rs-core/Cargo.toml
+++ b/webauthn-rs-core/Cargo.toml
@@ -36,8 +36,10 @@ x509-parser = "0.13.0"
 der-parser = "7.0.0"
 compact_jwt.workspace = true
 uuid = { workspace = true, features = ["serde"] }
+p256 = { version = "0.13.2" } #, features = ["serde"] }
 
 [dev-dependencies]
 hex-literal = "0.3"
+generic-array = { version = "0.14.7" }
 tracing-subscriber.workspace = true
 webauthn-rs-device-catalog.workspace = true
