--- a/webauthn-authenticator-rs/Cargo.toml
+++ b/webauthn-authenticator-rs/Cargo.toml
@@ -98,7 +98,7 @@ bitflags = "1.3.2"
 unicode-normalization = "0.1.22"
 num-traits = "0.2"
 num-derive = "0.3"
-async-stream = "0.3.5"
+async-stream = "= 0.3.3"
 async-trait = "0.1.58"
 futures.workspace = true
 
