--- a/webauthn-rs-core/Cargo.toml
+++ b/webauthn-rs-core/Cargo.toml
@@ -38,6 +38,7 @@ compact_jwt.workspace = true
 uuid = { workspace = true, features = ["serde"] }
 p256 = { version = "0.13.2" } #, features = ["serde"] }
 bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
+indexmap = { version = "2.0.2", features = ["serde"] }
 
 [dev-dependencies]
 hex-literal = "0.3"
